--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1939,7 +1939,7 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 @media (min-width: 575.5px) {
-    
+
     .border_Statistics {
         width: 190px;
         height: 190px;
@@ -2096,6 +2096,11 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 @media (min-width: 768px) {
+    .border_Statistics {
+        width: 190px;
+        height: 190px;
+    }
+
     .social_img {
         max-width: 190px
     }
