--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1638,9 +1638,10 @@ numberinput-header .numberinput-header[type="number"] {
         --fs-6lg: 30px !important;
         --fs-8xl: 36px !important;
         --fs-3xxl: 77.24px !important;
+        --fs-xxl: 46px !important;
 
         --lh-7xl: 47px !important;
-        --lh-9xl: 53px !important;
+        --lh-9xl: 58px !important;
     }
 }
 
@@ -1725,10 +1726,12 @@ numberinput-header .numberinput-header[type="number"] {
         height: 162px;
         transition: all linear 300ms;
     }
-        .imgPostion2 {
-            position: absolute;
-            left: 2%;
-            bottom: 17.33%;}
+
+    .imgPostion2 {
+        position: absolute;
+        left: 2%;
+        bottom: 17.33%;
+    }
 }
 
 @media (max-width:504px) {
