--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1586,12 +1586,7 @@ numberinput-header .numberinput-header[type="number"] {
     z-index: -1;
 }
 
-.imgAIshot {
-    position: absolute;
-    top: 40%;
-    left: 10%;
-    transform: translate(50% -50%);
-}
+
 
 .max_Width {
     max-width: 153px;
@@ -1599,58 +1594,7 @@ numberinput-header .numberinput-header[type="number"] {
 
 .brandGroupwidth {
     max-width: 518px;
-}
 
-.imgAi {
-    max-width: 140px;
-    height: 170px;
-    transition: all linear 300ms;
-}
-
-.imgAi:hover {
-    transform: scale(1.05);
-}
-
-.imgPostion {
-    position: absolute;
-    left: 2%;
-    top: 18.3%;
-}
-
-.imgPostion2 {
-    position: absolute;
-    left: 2%;
-    bottom: 15.33%;
-}
-
-.imgPostion3 {
-    position: absolute;
-    right: 2%;
-    top: 18.3%;
-}
-
-.imgPostion4 {
-    position: absolute;
-    right: 2%;
-    bottom: 15.33%;
-}
-
-.imgPostion1 {
-    position: absolute;
-    right: 32%;
-    top: 2%;
-}
-
-.imgPostion5 {
-    position: absolute;
-    right: 33%;
-    bottom: 33.33%;
-}
-
-.imgPostion7 {
-    position: absolute;
-    right: 32%;
-    bottom: 0;
 }
 
 .average_gap {
@@ -1754,239 +1698,6 @@ numberinput-header .numberinput-header[type="number"] {
         padding: 6px 16px !important;
     }
 
-    .imgAi {
-        max-width: 175px;
-        height: 162px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion2 {
-        position: absolute;
-        left: 2%;
-        bottom: 17.33%;
-    }
-}
-
-@media (max-width:504px) {
-    .imgPostion2 {
-        position: absolute;
-        left: 2%;
-        bottom: 19.33%;
-    }
-
-    .imgPostion3 {
-        position: absolute;
-        right: 2%;
-        top: 18.3%;
-    }
-
-    .imgPostion4 {
-        position: absolute;
-        right: 2%;
-        bottom: 19.33%;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 2%;
-    }
-
-    /* new class add  */
-    .imgAi {
-        max-width: 151px;
-        height: 124px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion {
-        position: absolute;
-        left: 2%;
-        top: 20.3%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 35%;
-        bottom: 36.33%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 34%;
-        bottom: 4%;
-    }
-}
-
-@media (max-width: 492px) {
-    .imgAi {
-        max-width: 151px;
-        height: 134px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion {
-        position: absolute;
-        left: 2%;
-        top: 18.3%;
-    }
-
-    .imgPostion2 {
-        position: absolute;
-        left: 2%;
-        bottom: 19.33%;
-    }
-
-    .imgPostion3 {
-        position: absolute;
-        right: 2%;
-        top: 18.3%;
-    }
-
-    .imgPostion4 {
-        position: absolute;
-        right: 2%;
-        bottom: 19.33%;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 2%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 32%;
-        bottom: 36.33%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 32%;
-        bottom: 2%;
-    }
-}
-
-@media (max-width: 442px) {
-    .imgAi {
-        max-width: 131px;
-        height: 116px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion {
-        position: absolute;
-        left: 2%;
-        top: 18.3%;
-    }
-
-    .imgPostion2 {
-        position: absolute;
-        left: 2%;
-        bottom: 17.33%;
-    }
-
-    .imgPostion3 {
-        position: absolute;
-        right: 2%;
-        top: 18.3%;
-    }
-
-    .imgPostion4 {
-        position: absolute;
-        right: 2%;
-        bottom: 17.33%;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 2%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 32%;
-        bottom: 33.33%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 32%;
-        bottom: 2%;
-    }
-
-    .imgPostion3 {
-        position: absolute;
-        right: 3%;
-        top: 18.3%;
-    }
-
-    .imgPostion4 {
-        position: absolute;
-        right: 3%;
-        bottom: 18.33%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 35%;
-        bottom: 36.33%;
-    }
-
-    .imgPostion {
-        position: absolute;
-        left: 4%;
-        top: 18.3%;
-    }
-
-    .imgPostion2 {
-        position: absolute;
-        left: 4%;
-        bottom: 18.33%;
-    }
-}
-
-@media (max-width:410px) {
-    .imgAi {
-        max-width: 111px;
-        height: 97px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 34%;
-        top: 2%;
-    }
-        .imgPostion7 {
-            position: absolute;
-            right: 34%;
-            bottom: 2%;
-        }
-}
-
-@media (max-width: 380px) {
-    .imgAi {
-        max-width: 111px;
-        height: 96px;
-        transition: all linear 300ms;
-    }
-}
-
-@media (max-width: 360px) {
-    .imgAi {
-        max-width: 100px;
-        height: 87px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 33%;
-        bottom: 36.33%;
-    }
 }
 
 @media (min-width: 1400px) or (max-width: 1600px) {
@@ -1996,22 +1707,16 @@ numberinput-header .numberinput-header[type="number"] {
 }
 
 @media (min-width: 575.5px) {
+    .brandGroupwidth {
+        max-width: 518px;
+        height: 534px;
+    }
 
     .border_Statistics {
         width: 190px;
         height: 190px;
     }
 
-    .imgAi {
-        max-width: 180px;
-        height: 166px;
-    }
-
-    .imgPostion2 {
-        position: absolute;
-        left: 3%;
-        bottom: 16.33%;
-    }
 
     .accounts_card {
         max-width: 471px;
@@ -2119,24 +1824,6 @@ numberinput-header .numberinput-header[type="number"] {
         --bs-accordion-btn-icon-width: 28px !important;
     }
 
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 2%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 32%;
-        bottom: 32%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 32%;
-        bottom: 0;
-    }
-
 
 
     .mobile_inner_part {
@@ -2164,7 +1851,7 @@ numberinput-header .numberinput-header[type="number"] {
         gap: 20px !important;
     }
 
-  
+
     .mobile_wh {
         width: 314px !important;
         height: 614px !important;
@@ -2231,40 +1918,6 @@ numberinput-header .numberinput-header[type="number"] {
         gap: 24px;
     }
 
-    .imgPostion {
-        position: absolute;
-        left: 2.9%;
-        top: 19%;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 2%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 32%;
-        bottom: 0;
-    }
-
-    .imgAi {
-        max-width: 180px;
-        height: 176px;
-    }
-
-    .imgPostion2 {
-        position: absolute;
-        left: 3%;
-        bottom: 15.33%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 33%;
-        bottom: 32.33%;
-    }
 
     .mobile_inner_part {
         padding: 28px 3px;
@@ -2276,11 +1929,12 @@ numberinput-header .numberinput-header[type="number"] {
         width: 461px !important;
         height: 421px !important;
     }
-          .mobile_trading {
-              border-radius: 5.87px;
-              max-width: 247px;
-              max-height: 208px;
-          }
+
+    .mobile_trading {
+        border-radius: 5.87px;
+        max-width: 247px;
+        max-height: 208px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -2291,8 +1945,6 @@ numberinput-header .numberinput-header[type="number"] {
     .man-profile-card {
         min-width: 367px;
     }
-
- 
 
     .mw_814 {
         max-width: 814px;
@@ -2346,55 +1998,15 @@ numberinput-header .numberinput-header[type="number"] {
         margin-top: 0;
     }
 
-    .imgAi {
-        max-width: 180px;
-        height: 164px;
-        transition: all linear 300ms;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 31%;
-        top: 1%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 31%;
-        bottom: 32%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 31%;
-        bottom: -1%;
-    }
 
     .max-w-lg-626 {
         max-width: 626px;
     }
 
-    .imgAi {
-        max-width: 170px;
-        height: 164px;
-        transition: all linear 300ms;
-    }
 
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 1%;
-    }
 }
 
 @media (min-width: 1023.8px) {
-   
-
-    .imgPostion4 {
-        position: absolute;
-        right: 2%;
-        bottom: 15.22%;
-    }
 
     .understanding_card {
         padding: 25px 50px 0px 25px;
@@ -2411,31 +2023,11 @@ numberinput-header .numberinput-header[type="number"] {
         margin-bottom: 15px;
     }
 
-    .imgAi {
-        max-width: 170px;
-        height: 160px;
-    }
 
-    .imgPostion1 {
-        position: absolute;
-        right: 33%;
-        top: 2%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 33.6%;
-        bottom: 0%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 34%;
-        bottom: 34%;
-    }
 }
 
 @media (min-width:1200px) {
+
     .social_img {
         max-width: 210px
     }
@@ -2489,45 +2081,6 @@ numberinput-header .numberinput-header[type="number"] {
         max-width: 654px;
     }
 
-    .imgAi {
-        max-width: 190px;
-        height: 176px;
-    }
-
-    .imgPostion1 {
-        position: absolute;
-        right: 32%;
-        top: 3%;
-    }
-
-    .imgAi {
-        max-width: 180px;
-        height: 176px;
-    }
-
-    .imgPostion4 {
-        position: absolute;
-        right: 2%;
-        bottom: 15.33%;
-    }
-
-    .imgPostion3 {
-        position: absolute;
-        right: 2%;
-        top: 17.6%;
-    }
-
-    .imgPostion7 {
-        position: absolute;
-        right: 31.6%;
-        bottom: -1%;
-    }
-
-    .imgPostion5 {
-        position: absolute;
-        right: 31.9%;
-        bottom: 31%;
-    }
 
     .px-xl-88 {
         padding-left: 88px;
@@ -2542,6 +2095,3 @@ numberinput-header .numberinput-header[type="number"] {
         animation: scroll 30s linear infinite;
     }
 }
-
-
-
